# cash-lending

./: .gitignore  cash_control_taxonomy_v1.md
cashflow_ingest/: CHANGELOG.md  README.md  Status.md  pyproject.toml
cashflow_ingest/cashflow_ingest/api/: app.py  routes_ingest.py  schemas.py
cashflow_ingest/cashflow_ingest/ingest/adapters/: csv_file.py
cashflow_ingest/cashflow_ingest/ingest/pipeline/: aggregates.py  cct_aggregates.py  cct_classifier.py  cct_enums.py  idempotency.py  memory_sink.py  normalizer.py  semantic_classifier.py  storage_port.py
cashflow_ingest/data/: pharmacy_data_generator_v3.py  pharmacy_input_pack_README.md  pharmacy_input_pack_v2_control_realism_README.md  pharmacy_minimal_base_v5.csv  pharmacy_minimal_fraud_like_v5.csv  pharmacy_minimal_stress_v5.csv  pharmacy_paytm_like_base_v5.csv  pharmacy_paytm_like_fraud_like_v5.csv  pharmacy_paytm_like_stress_v5.csv
cashflow_ingest/docs/: architecture.md  authoritative_rules.md
cashflow_ingest/tests/: conftest.py  test_aggregates.py  test_cct_aggregates.py  test_cct_classifier.py  test_csv_adapter.py  test_idempotency.py  test_ingest_feeds.py  test_ingest_routes.py  test_normalizer.py
data/: pharmacy_minimal_base_05Nov25_04Feb26.csv  pharmacy_minimal_fraud_like_05Nov25_04Feb26.csv  pharmacy_minimal_stress_05Nov25_04Feb26.csv  pharmacy_paytm_like_base_05Nov25_04Feb26.csv  pharmacy_paytm_like_fraud_like_05Nov25_04Feb26.csv  pharmacy_paytm_like_stress_05Nov25_04Feb26.csv  synthetic-data-generation.py
docs/tdd/: 01_overview.md  02_architecture_and_flows.md  02a_diagrams_render_safe.md  (+7 more)
